# program-induction-rdt

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
data/human/: chirp.json
data/primitive/: task_frames_1.csv  task_pm.csv  task_pm_RLE.csv  task_pm_chunk.csv
scripts/: 0_construct_pm.py  1_construct_frame.py  2_normative_dp.py  3_compress_baseline.py  3_compress_dp.py  4_evaluate.py
src/domain/melody/: base_compressor.py  dp_compressor.py  greedy_dp_compressor.py  melody_primitive.py  melody_utils.py
src/program/: grammar.py  helpers.py  primitive.py  router.py  type.py
src/utils/: complexity_measurement.py  general.py  preprocess.py
