[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdt"
version = "0.1.0"
dependencies = [
  "numpy>=1.23,<2",
  "scipy>=1.10,<2",
  "pandas>=2.0,<3",
  "matplotlib>=3.7,<4",
  "seaborn>=0.13,<1",
  "scikit-learn>=1.2,<2",
  "statsmodels>=0.14,<1",
  "arviz==0.15.1",
  "xarray>=2023.1.0,<2025",
  "xarray-einstats>=0.5,<1",
  "h5py>=3.10,<4",
  "h5netcdf>=1.1,<2",
  "librosa>=0.10.1,<1",
  "soundfile>=0.12,<1",
  "soxr>=0.3,<1",
  "audioread>=3.0,<4",
  "mido>=1.3,<2",
  "pretty-midi>=0.2.10,<1",
  "mir-eval>=0.6,<1",
  "midi2audio>=0.1.1,<1",
  "pooch>=1.7,<2",
  "pydub>=0.25,<1",
  "tqdm>=4.65,<5",
  "requests>=2.31,<3",
  "PyYAML>=6,<7",
  "textdistance>=4.6,<5",
  "more-itertools>=10"
]